; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/src/int/extr_i15_ninv15.c_br_i15_ninv15.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/src/int/extr_i15_ninv15.c_br_i15_ninv15.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @br_i15_ninv15(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sub nsw i32 2, %4
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @MUL15(i32 %7, i32 %8)
  %10 = sub nsw i32 2, %9
  %11 = call i32 @MUL15(i32 %6, i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @MUL15(i32 %13, i32 %14)
  %16 = sub nsw i32 2, %15
  %17 = call i32 @MUL15(i32 %12, i32 %16)
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @MUL15(i32 %19, i32 %20)
  %22 = sub nsw i32 2, %21
  %23 = call i32 @MUL15(i32 %18, i32 %22)
  store i32 %23, i32* %3, align 4
  %24 = load i32, i32* %2, align 4
  %25 = and i32 %24, 1
  %26 = load i32, i32* %3, align 4
  %27 = sub nsw i32 0, %26
  %28 = call i32 @MUX(i32 %25, i32 %27, i32 0)
  %29 = and i32 %28, 32767
  ret i32 %29
}

declare dso_local i32 @MUL15(i32, i32) #1

declare dso_local i32 @MUX(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
